Fixes #604 Long entry titles can overflow

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9485,6 +9485,7 @@ form {
     width: 60px;
     height: 60px;
     margin-bottom: 6px;
+    overflow: hidden;
     &:hover {
       cursor: pointer;
     }
